--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,20 +6,107 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>846</width>
+    <height>628</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout_8">
+    <item row="7" column="5">
+     <layout class="QVBoxLayout" name="verticalLayout_3"/>
+    </item>
+    <item row="7" column="6">
+     <layout class="QVBoxLayout" name="verticalLayout_4"/>
+    </item>
+    <item row="2" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_6"/>
+    </item>
+    <item row="7" column="2">
+     <layout class="QHBoxLayout" name="horizontalLayout"/>
+    </item>
+    <item row="5" column="0">
+     <layout class="QGridLayout" name="gridLayout_5"/>
+    </item>
+    <item row="7" column="3">
+     <layout class="QVBoxLayout" name="verticalLayout"/>
+    </item>
+    <item row="4" column="0">
+     <layout class="QGridLayout" name="gridLayout"/>
+    </item>
+    <item row="7" column="0">
+     <layout class="QGridLayout" name="gridLayout_7"/>
+    </item>
+    <item row="0" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_8"/>
+    </item>
+    <item row="7" column="1">
+     <layout class="QGridLayout" name="gridLayout_9"/>
+    </item>
+    <item row="3" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_5"/>
+    </item>
+    <item row="6" column="0">
+     <layout class="QGridLayout" name="gridLayout_6"/>
+    </item>
+    <item row="7" column="4">
+     <layout class="QVBoxLayout" name="verticalLayout_2"/>
+    </item>
+    <item row="1" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_7"/>
+    </item>
+    <item row="7" column="7">
+     <layout class="QVBoxLayout" name="verticalLayout_9"/>
+    </item>
+    <item row="2" column="3" rowspan="4" colspan="2">
+     <layout class="QVBoxLayout" name="verticalLayout_10">
+      <item>
+       <widget class="QPushButton" name="infoCard_b">
+        <property name="text">
+         <string>Інформація про відеокарту</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="modeCard_b">
+        <property name="text">
+         <string>Змінити режим відеокарти</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="fanCard_b">
+        <property name="text">
+         <string>Керування вентиляторами</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="monitorCard_b">
+        <property name="text">
+         <string>Моніторинг та логування</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_5">
+        <property name="text">
+         <string>PushButton</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>846</width>
      <height>22</height>
     </rect>
    </property>
