--- a/cardinfo.ui
+++ b/cardinfo.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_6" rowstretch="0,0" columnstretch="0,1,0">
+   <layout class="QGridLayout" name="gridLayout_6" rowstretch="0" columnstretch="0,1,0">
     <item row="0" column="0">
      <spacer name="horizontalSpacer">
       <property name="orientation">
@@ -46,21 +46,21 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="InfoCard1_b">
           <property name="text">
            <string>PushButton</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="InfoCard2_b">
           <property name="text">
            <string>PushButton</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_3">
+         <widget class="QPushButton" name="InfoCard3_b">
           <property name="text">
            <string>PushButton</string>
           </property>
